Adding xn basebox config